stl-test/Tests/coordinate/bounds/Negative/test5.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord{3, 3, 3}
}
